--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -10,6 +10,11 @@ padding: 10px;
     transition: box-shadow 0.3s;
     box-shadow: 0px 0px 5px #1e88e5;
 }
+
+.hero .card img{
+    max-width: 255.5px;
+    max-height: 159.34px;
+}
 .hero .card.selected{
     transition: 0.2s;
     box-shadow: 0px 0px 3px 3px #1e88e5;
