--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -2,7 +2,7 @@
 <div class='container row'>
   <div class='hero col-md-3' *ngFor='let hero of heroes'>
 
-    <div class='card' [class.selected]='hero === selectedHero'>
+    <div class='card'>
       <h5 class='card-header'>{{ hero.name }}</h5>
 
       <div>
@@ -17,12 +17,10 @@
         <div><span>Nome: {{ hero.name }}</span></div>
         <div><span>Tipo: Lutador</span></div>
       </div>
-      <div class='card-footer'> 
-        <p class='btn btn-primary' (click)='onSelect(hero)'>Editar</p>
+      <div class='card-footer'>
+        <a class='btn btn-primary' routerLink='/detail/{{ hero.id }}'>Editar</a>
       </div>
     </div>
 
   </div>
 </div>
-
-<app-hero-detail [hero]='selectedHero'></app-hero-detail>
