--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,6 +1,6 @@
 <div *ngIf='messageService.messages.length'>
     <h2>Messages</h2>
-    <button class='btn btn-secondary clear' (click)='messageService.clear()'></button>
+    <button class='btn btn-secondary clear' (click)='messageService.clear()'>Clear</button>
     <div *ngFor='let message of messageService.messages'>
         {{ message }}
     </div>
