implementação do updateHero()

--- a/frontend/src/app/hero-detail/hero-detail.component.html
+++ b/frontend/src/app/hero-detail/hero-detail.component.html
@@ -12,4 +12,5 @@
         </div>
     </fieldset>
 </div>
-<a class='btn btn-secondary' (click)='goBack()'>Voltar</a>
+<button class='btn btn-secondary' (click)='goBack()'>Voltar</button>
+<button class='btn btn-primary' (click)='save()'>Salvar</button>
